# RustSeal

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
analyses/: LeakLines.md  csts-analyze-leakage-20260703-164250.orchestrator.md  csts-analyze-leakage-20260704-064032.orchestrator.md  csts-analyze-leakage-20260704-070258.orchestrator.md  csts-analyze-leakage-20260704-071813.orchestrator.md  csts-analyze-leakage-20260704-125618.orchestrator.md  csts-analyze-leakage-20260704-131000.orchestrator.md  csts-analyze-loc.2026-0703-13:56.orchestrator.md  loc-grand-total.md
benches/: #unsafe_lazy_hole_resort_binary_heap.rs#
benches/binary_heap/: compare.rs  lazy_hole_resort_binary_heap.rs  real_binary_heap.rs  unsafe_binary_heap.rs
benches/binary_heap/losers/: safe_binary_heap.rs  safe_but_for_index_binary_heap.rs  safe_opt_binary_heap.rs  unsafe_lazy_binary_heap.rs  unsafe_lazy_hole_binary_heap.rs  unsafe_nopanic_binary_heap.rs
benches/vec/: compare.rs  real_vec.rs
benches/vec/lazy_loss_recovery/: vec.rs
benches/vec/std/: vec.rs
benches/vec_deque/: compare.rs  real_vec_deque.rs
benches/vec_deque/lazy_loss_recovery/: vec_deque.rs
benches/vec_deque/std/: vec_deque.rs
data/: loc-timing.txt  top1000rustgithubs.txt
docs/: BinaryHeapLeakage.md  CollectionLeakage.md  ExistingBinaryHeapBenchmarks.md  ExistingVecBenchmarks.md  ExistingVecDequeBenchmarks.md  Leakage.md  LinesOfCode.md  VecDequeLeakage.md  VecLeakage.md  collection-extraction-design-note.md  leak-amplification-and-forget-safety.md
labs/: README.md
labs/verus-lab/: Cargo.toml  README.md
labs/verus-lab/scripts/: build.sh  validate.sh
labs/verus-lab/src/: lib.rs
labs/verus-lab/src/experiments/: exp001_identity_immutable_iter_u32.rs  exp002_set_ends_zero_index_partial_eq.rs  exp003_set_ends_zero_mut_cursor.rs  exp004_set_ends_zero_mut_cursor_forget.rs  exp005_leak_mem_forget.rs  exp006_leak_box_leak.rs  exp007_leak_vec_leak.rs  exp008_leak_string_leak.rs  exp009_leak_manuallydrop.rs  exp010_leak_cstring_into_raw.rs  exp011_leak_box_into_raw.rs  exp012_leak_rc_into_raw.rs  exp013_leak_arc_into_raw.rs  exp014_leak_vec_into_raw_parts.rs  exp015_drop_requires_rejected.rs  exp016_drop_ensures_false_rejected.rs  exp017_drop_ensures_external_mutation.rs  exp018_manuallydrop_skips_drop_effect.rs
plans/: r0001-plan-from-orchestrator-to-orchestrator-session-restart.md  r0002-plan-from-orchestrator-to-user-fix-csts-analyze-loc-logging.md  r0003-plan-from-orchestrator-to-user-import-vercoll-as-rustseal-crate.md  r0004-plan-from-orchestrator-to-orchestrator-bench-std-vs-lazy.md  r0005-plan-from-orchestrator-to-orchestrator-faithful-real-bench-port.md  r0006-plan-from-orchestrator-to-orchestrator-session-restart.md
reports/: r0003-report-from-orchestrator-to-user-import-vercoll-as-rustseal-crate.md  r0004-report-from-orchestrator-to-user-bench-std-vs-lazy.md
scripts/: bench.sh  build.sh  clonetop1000rustgithubs.sh  compare-safe-unsafe  compare_safe_unsafe.py  count-leaks.sh  count-loc.sh  generate-analysis-leakage.sh  generate-analysis-loc.sh  test.sh  validate.sh
src/: lib.rs
src/binary_heap/: README.md  binary_heap.rs  lazy_hole_resort_binary_heap.rs  unsafe_binary_heap.rs  unsafe_lazy_hole_resort_binary_heap.rs
src/binary_heap/losers/: safe_binary_heap.rs  safe_but_for_index_binary_heap.rs  safe_opt_binary_heap.rs  unsafe_lazy_binary_heap.rs  unsafe_lazy_hole_binary_heap.rs  unsafe_nopanic_binary_heap.rs
src/vec/: vec.rs
src/vec/lazy_loss_recovery/: cow.rs  drain.rs  extract_if.rs  partial_eq.rs  peek_mut.rs  raw_vec_shim.rs  spec_from_elem.rs  vec.rs
src/vec/std/: drain.rs  extract_if.rs  into_iter.rs  set_len_on_drop.rs  spec_extend.rs  spec_from_iter_nested.rs  splice.rs  vec.rs
src/vec_deque/: vec_deque.rs
src/vec_deque/lazy_loss_recovery/: drain.rs  extract_if.rs  macros.rs  vec_deque.rs
src/vec_deque/std/: drain.rs  extract_if.rs  into_iter.rs  iter.rs  iter_mut.rs  raw_vec_shim.rs  spec_extend.rs  spec_from_iter.rs  splice.rs  vec_deque.rs
tests/binary_heap/: lazy_hole_resort_binary_heap.rs  unsafe_binary_heap.rs  unsafe_lazy_hole_resort_binary_heap.rs
tests/binary_heap/losers/: safe_binary_heap.rs  safe_but_for_index_binary_heap.rs  safe_opt_binary_heap.rs  unsafe_lazy_binary_heap.rs  unsafe_lazy_hole_binary_heap.rs  unsafe_nopanic_binary_heap.rs
tests/vec/lazy_loss_recovery/: vec.rs
tests/vec/std/: vec.rs
tests/vec_deque/lazy_loss_recovery/: vec_deque.rs
tests/vec_deque/std/: vec_deque.rs
